--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
+    "mongoose": "^8.3.3",
     "ms": "^2.1.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
